# microgl

./: CMakeLists.txt  LICENSE  README.md  main.c  run.sh
include/: main.h
include/math/: angles.h  matrizes.h  utils.h  vectors.h
include/math/matrizes/: mat3.h  mat4.h
include/math/vectors/: vec2.h  vec3.h  vec4.h
include/microgl/: frame.h  pipeline.h  raster.h  shader.h  zframe.h
src/math/matrizes/: mat3.c  mat4.c
src/math/vectors/: vec2.c  vec3.c  vec4.c
src/microgl/: frame.c  pipeline.c  raster.c  shader.c  zframe.c
